Implement replication policy management API
This commit implements the replication policy management API
